Minor copy fixes

--- a/case-studies/sequence-bundles/index.html
+++ b/case-studies/sequence-bundles/index.html
@@ -70,7 +70,7 @@ label: case-study
 
          <h3>My Approach</h3>
          <p>
-            My user-centred approach focused on target audiences in academia and industry. It helped secure interest from bioinformatics practitioners. I invited users to co-design, prototyped, tested, and I took the concept to conferences.
+            My user-centred approach focused on target audiences in academia and industry. It helped secure interest from bioinformatics practitioners. I invited users to co-design, I prototyped, tested, and took the concept to conferences.
          </p>
       </div>
 
@@ -127,7 +127,7 @@ label: case-study
 
          <h3>The Solution</h3>
          <p>
-            Sequence Bundles ia a novel MSA visualisation tool that exposes patterns in sequence data that would otherwise remain hidden. By preserving sequence continuity, the method provides meaningful visualisation  this makes it possible to observe important residue correlations and uncover hidden sequence motifs.
+            Sequence Bundles is a novel MSA visualisation tool that exposes patterns in sequence data that would otherwise remain hidden. By preserving sequence continuity, the method provides meaningful visualisation that makes it possible to observe important residue correlations and uncover hidden sequence motifs.
          </p>
       </div>
 
