--- a/case-studies/sequence-bundles/index.html
+++ b/case-studies/sequence-bundles/index.html
@@ -24,7 +24,7 @@ label: case-study
 
       <div class="container-one-third shift-back">
          <div class="caption-margin">
-            <h4 class="caption"><b>My role:</b> Project + Design Lead</h4>
+            <h4 class="caption"><b>My role:</b> Project & Design Lead</h4>
             <h4 class="caption"><b>Project type:</b> In-house + External collaboration</h4>
             <h4 class="caption"><b>Year:</b> 2013–2014</h4>
             <h4 class="caption"><b>My contributions:</b> Design leadership, Project management, Fundraising, Prototyping, Web development, Publishing</h4>
