Fix broken image link

--- a/case-studies/sequence-bundles/index.html
+++ b/case-studies/sequence-bundles/index.html
@@ -172,7 +172,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/sb-front.png" class="image-gallery shadow">
+            <img src="/img/cases/sb/sb-front1.png" class="image-gallery shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
