Added secondary annotation to SB case

--- a/case-studies/sequence-bundles/index.html
+++ b/case-studies/sequence-bundles/index.html
@@ -19,6 +19,7 @@ label: case-study
                   <img src="/img/cases/sb-front.png" title="Your browser does not support the video tag" alt="Sequence Bundles intro video">
                <video>
             </div>
+            <h5 class="secondary-annotation">Video narrated by James Godwin</h5>
          </div>
       </div>
 
