--- a/case-studies/sequence-bundles/index.html
+++ b/case-studies/sequence-bundles/index.html
@@ -16,7 +16,7 @@ label: case-study
                <video autoplay muted loop controls playsinline class="shadow">
                   <source src="/img/cases/sb/sb-video.webm" type="video/webm">
                   Your browser does not support the video tag.
-                  <img src="/img/cases/sb-front.png" title="Your browser does not support the video tag" alt="Sequence Bundles intro video">
+                  <img src="/img/cases/sb-front8.png" title="Your browser does not support the video tag" alt="Sequence Bundles intro video">
                <video>
             </div>
             <h5 class="secondary-annotation">Video narrated by James Godwin</h5>
@@ -136,7 +136,7 @@ label: case-study
          <div class="container-two-thirds shift">
             <div class="block-margin">
                <img src="/img/cases/sb/sb-problem-2.jpg" class="image-gallery shadow">
-               <img src="/img/cases/sb/sb-ppkk-motif.png" class="image-gallery shadow">
+               <img src="/img/cases/sb/sb-ppkk-motif.jpg" class="image-gallery shadow">
             </div>
          </div>
          <div class="container-one-third shift-back">
