--- a/case-studies/sequence-bundles/index.html
+++ b/case-studies/sequence-bundles/index.html
@@ -92,7 +92,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/sb/sb-prototype.png" class="image-gallery shadow">
+            <img src="/img/cases/sb/sb-prototype.jpg" class="image-gallery shadow">
          </div>
       </div>
       <div class="container-one-third shift-back">
