--- a/case-studies/sequence-bundles/index.html
+++ b/case-studies/sequence-bundles/index.html
@@ -27,8 +27,7 @@ label: case-study
          <div class="caption-margin">
             <h4 class="caption"><b>My role:</b> Project & Design Lead</h4>
             <h4 class="caption"><b>Project type:</b> In-house + External collaboration</h4>
-            <h4 class="caption"><b>Company:</b> {{ site.data.pages.case-study.sb.company }}</h4>
-            <!-- <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.sb.year }}</h4> -->
+            <h4 class="caption"><b>Year:</b> {{ site.data.pages.case-study.sb.year }}</h4>
             <h4 class="caption"><b>My contributions:</b> Design leadership, Project management, Fundraising, Prototyping, Web development, Publishing</h4>
             <h4 class="caption"><b>Outcome:</b> New data patterns exposed with an award-winning visualisation tool</h4>
             <h4 class="caption"><b>Website:</b> <a href="https://www.science-practice.com/projects/sequence-bundles/" target="_blank">Sequence Bundles</a></h4>
