Relink to image asset

--- a/case-studies/sequence-bundles/index.html
+++ b/case-studies/sequence-bundles/index.html
@@ -16,7 +16,7 @@ label: case-study
                <video autoplay muted loop controls playsinline class="shadow">
                   <source src="/img/cases/sb/sb-video.webm" type="video/webm">
                   Your browser does not support the video tag.
-                  <img src="/img/cases/sb-front8.png" title="Your browser does not support the video tag" alt="Sequence Bundles intro video">
+                  <img src="/img/cases/sb/sb-front8.png" title="Your browser does not support the video tag" alt="Sequence Bundles intro video">
                <video>
             </div>
             <h5 class="secondary-annotation">Video narrated by James Godwin</h5>
