--- a/case-studies/sequence-bundles/index.html
+++ b/case-studies/sequence-bundles/index.html
@@ -50,7 +50,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/sb/sb-problem-1.jpg" class="image-gallery shadow">
+            <img src="/img/cases/sb/sb-problem-1.jpg" class="image-gallery shadow" alt="pLogo summarises data about each position in a sequence but hides important information about the sequence itself. Here, two different sequences result in the same pLogo.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -77,8 +77,8 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/sb/sb-sketch-1.jpg" class="image-gallery shadow">
-            <img src="/img/cases/sb/sb-sketch-2.jpg" class="image-gallery shadow">
+            <img src="/img/cases/sb/sb-sketch-1.jpg" class="image-gallery shadow" alt="Early idea exploration and concept testing on paper.">
+            <img src="/img/cases/sb/sb-sketch-2.jpg" class="image-gallery shadow" alt="Focus on leveraging sequence continuity to surface hidden patterns.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -91,7 +91,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/sb/sb-prototype.jpg" class="image-gallery shadow">
+            <img src="/img/cases/sb/sb-prototype.jpg" class="image-gallery shadow" alt="I prototyped in code using Processing.js to advance the concept and test at scale with real-life data.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -104,7 +104,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/sb/sb-method-1.png" class="image-gallery shadow">
+            <img src="/img/cases/sb/sb-method-1.png" class="image-gallery shadow" alt="Each sequence is a line (Bezier curve). When letters in the sequence are the same (conserved), we bundle the lines together. Otherwise, we pull them apart.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -134,8 +134,8 @@ label: case-study
 
          <div class="container-two-thirds shift">
             <div class="block-margin">
-               <img src="/img/cases/sb/sb-problem-2.jpg" class="image-gallery shadow">
-               <img src="/img/cases/sb/sb-ppkk-motif.jpg" class="image-gallery shadow">
+               <img src="/img/cases/sb/sb-problem-2.jpg" class="image-gallery shadow" alt="Sequence Bundles overcomes the limitations of a pLogo by visualising relational sequence motifs.">
+               <img src="/img/cases/sb/sb-ppkk-motif.jpg" class="image-gallery shadow" alt="A bifurcation in the general consensus sequence in positions 19–23 found with Sequence Bundles, not easily found using traditional methods.">
             </div>
          </div>
          <div class="container-one-third shift-back">
@@ -160,7 +160,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/sb/sb-alvis.png" class="image-gallery shadow">
+            <img src="/img/cases/sb/sb-alvis.png" class="image-gallery shadow" alt="Alvis desktop app. It uses Sequence Bundles as its central visualisation tool. I led closed beta launch for Alvis. Later it was open-sourced by EMBL-EBI.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -173,7 +173,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/sb/sb-front1.png" class="image-gallery shadow">
+            <img src="/img/cases/sb/sb-front1.png" class="image-gallery shadow" alt="Sequence Bundles web app. I designed and co-developed the frontend. Backend service built in partnership with the Goldman Group at EMBL-EBI.">
          </div>
       </div>
       <div class="container-one-third shift-back">
@@ -199,7 +199,7 @@ label: case-study
 
       <div class="container-two-thirds shift">
          <div class="block-margin">
-            <img src="/img/cases/sb/sb-praise.png" class="image-gallery shadow">
+            <img src="/img/cases/sb/sb-praise.png" class="image-gallery shadow" alt="User feedback shared in close beta by Meng Xu, Director of Bioinformatics at Hampton Creek.">
          </div>
       </div>
       <div class="container-one-third shift-back">
